# fastapi_workflow

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: workflow.yml
app/: main.py  settings.py
app/clickhouse/: database.py  init_db_script.py  router.py  schema.py
tests/: conftest.py  test_health.py
