[project]
name = "fastapi-workflow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
